# mersad-with-midad

./: .gitignore  README.md  README_en.md  manifest.json
backend/: .env  dependencies.py  main.py  pyproject.toml
backend/agent/: ai_agent.py
backend/data/: base_system_prompt.txt
backend/db/: config.py  schemas.py
backend/routers/: ai_router.py
frontend/: manifest.json
frontend/src/: index.html  sw.js
frontend/src/js/: ai-actions.js  get-scripts.js  main.js  service-worker.js
frontend/src/styles/: ai-elements.css  global.css
src/: index.html  teleprompter.html
src/js/: ai-agent.js  ai-popup.js  auth.js  get-scripts.js  icon_animation.js  notification.js  service-worker.js  sony-fx3.js
src/styles/: icon_animation.css  index.css  notification.css  teleprompter.css
