[project]
name = "backend"
version = "0.1.0"
description = "Mersad AI Backend - FastAPI powered backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Flat-layout: tell hatchling where the application packages live
[tool.hatch.build.targets.wheel]
packages = ["agent", "db", "routers"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
